fix: respostas do catalogo consertadas