@@ -1,32 +1,29 @@
 package com.squad13.apimonolito.util;
 
 import com.squad13.apimonolito.DTO.catalog.res.*;
-import com.squad13.apimonolito.models.catalog.Ambiente;
-import com.squad13.apimonolito.models.catalog.ItemDesc;
+import com.squad13.apimonolito.exceptions.InvalidCompositorException;
+import com.squad13.apimonolito.models.catalog.*;
 import com.squad13.apimonolito.models.catalog.associative.ComposicaoAmbiente;
+import com.squad13.apimonolito.models.catalog.associative.ComposicaoMaterial;
 import com.squad13.apimonolito.models.catalog.associative.ItemAmbiente;
 import com.squad13.apimonolito.models.catalog.associative.MarcaMaterial;
 import org.springframework.stereotype.Component;
 
+import java.util.Collections;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 @Component
 public class Mapper {
 
-    public ResItemDTO toResponse(ItemDesc item) {
+    public ResItemDTO toResponse(ItemDesc item, boolean loadAssociations) {
         if (item == null) return null;
 
-        ResItemTypeDTO typeDto = getResItemTypeDTO(item);
+        ResItemTypeDTO typeDto = toResItemTypeDTO(item);
 
-        Set<ItemAmbiente> itemAmbienteSet = item.getAmbienteSet();
-        if (itemAmbienteSet == null) {
-            itemAmbienteSet = Set.of();
-        }
-
-        Set<ResMinDTO> ambienteSet = getMinAmbienteDTO(itemAmbienteSet);
-
-        Set<ResMinDTO> padraoSet = getAmbienteMinPadraoDTO(itemAmbienteSet);
+        Set<ResMinDTO> ambientes = loadAssociations ? getMinAmbienteDTO(item.getAmbienteSet()) : Collections.emptySet();
+        Set<ResMinDTO> padroes = loadAssociations ? getAmbienteMinPadraoDTO(item.getAmbienteSet()) : Collections.emptySet();
 
         return new ResItemDTO(
                 item.getId(),
@@ -34,103 +31,221 @@ public class Mapper {
                 item.getIsActive(),
                 item.getDesc(),
                 typeDto,
-                ambienteSet,
-                padraoSet
+                ambientes,
+                padroes
         );
     }
 
-    public ResAmbienteDTO toResponse(Ambiente ambiente) {
+    public ResItemTypeDTO toResponse(ItemType item) {
+        if (item == null) return null;
+
+        Set<ResMinDTO> items = getMinItemDTOByEntity(item.getItemDescSet());
+
+        return new ResItemTypeDTO(
+                item.getId(),
+                item.getName(),
+                item.getIsActive(),
+                items
+        );
+    }
+
+    public ResAmbienteDTO toResponse(Ambiente ambiente, boolean loadAssociations) {
         if (ambiente == null) return null;
 
-        Set<ItemAmbiente> itemAmbienteSet = ambiente.getItemSet();
-
-        Set<ResMinDTO> itemSet = getMinItemDTO(itemAmbienteSet);
-
-        Set<ResMinDTO> padraoSet = getAmbienteMinPadraoDTO(itemAmbienteSet);
+        Set<ResMinDTO> items = loadAssociations ? getMinItemDTO(ambiente.getItemSet()) : Collections.emptySet();
+        Set<ResMinDTO> padroes = loadAssociations ? getAmbienteMinPadraoDTO(ambiente.getItemSet()) : Collections.emptySet();
 
         return new ResAmbienteDTO(
                 ambiente.getId(),
                 ambiente.getName(),
                 ambiente.getLocal(),
                 ambiente.getIsActive(),
-                itemSet,
-                padraoSet
+                items,
+                padroes
         );
     }
 
     public ResItemAmbienteDTO toResponse(ItemAmbiente association) {
         if (association == null) return null;
 
-        ResAmbienteDTO ambiente = toResponse(association.getAmbiente());
-        ResItemDTO item = toResponse(association.getItemDesc());
-
         return new ResItemAmbienteDTO(
                 association.getId(),
-                item,
-                ambiente
+                toResponse(association.getItemDesc(), false),
+                toResponse(association.getAmbiente(), false)
         );
     }
 
-    private ResItemTypeDTO getResItemTypeDTO(ItemDesc item) {
-        ResItemTypeDTO typeDto = null;
-        if (item.getType() != null) {
-            typeDto = new ResItemTypeDTO(
-                    item.getType().getId(),
-                    item.getType().getName(),
-                    item.getType().getIsActive(),
-                    Set.of(
-                            new ResMinDTO(
-                                    item.getId(),
-                                    item.getName(),
-                                    item.getIsActive()
-                            )
-                    )
-            );
+    public ResMarcaDTO toResponse(Marca marca, boolean loadAssociations) {
+        if (marca == null) return null;
+
+        Set<ResMinDTO> materiais = loadAssociations ? getMinMaterialDTO(marca.getMaterialSet()) : Collections.emptySet();
+        Set<ResMinDTO> padroes = loadAssociations ? getMaterialMinPadraoDTO(marca.getMaterialSet()) : Collections.emptySet();
+
+        return new ResMarcaDTO(
+                marca.getId(),
+                marca.getName(),
+                marca.getIsActive(),
+                materiais,
+                padroes
+        );
+    }
+
+    public ResMaterialDTO toResponse(Material material, boolean loadAssociations) {
+        if (material == null) return null;
+
+        Set<ResMinDTO> marcas = loadAssociations ? getMinMaterialDTO(material.getMarcaSet()) : Collections.emptySet();
+        Set<ResMinDTO> padroes = loadAssociations ? getMaterialMinPadraoDTO(material.getMarcaSet()) : Collections.emptySet();
+
+        return new ResMaterialDTO(
+                material.getId(),
+                material.getName(),
+                material.getIsActive(),
+                marcas,
+                padroes
+        );
+    }
+
+    public ResMarcaMaterialDTO toResponse(MarcaMaterial association) {
+        if (association == null) return null;
+
+        return new ResMarcaMaterialDTO(
+                association.getId(),
+                toResponse(association.getMarca(), false),
+                toResponse(association.getMaterial(), false)
+        );
+    }
+
+    public ResPadraoDTO toResponse(Padrao padrao, boolean loadAssociations) {
+        if (padrao == null) return null;
+
+        Set<ResMinDTO> items = Set.of();
+        Set<ResMinDTO> ambientes = Set.of();
+        Set<ResMinDTO> marcas = Set.of();
+        Set<ResMinDTO> materiais = Set.of();
+
+        if (loadAssociations) {
+            items = padrao.getAmbienteSet().stream()
+                    .map(comp -> toMinDTO(comp.getCompositor().getItemDesc()))
+                    .collect(Collectors.toSet());
+
+            ambientes = padrao.getAmbienteSet().stream()
+                    .map(comp -> toMinDTO(comp.getCompositor().getAmbiente()))
+                    .collect(Collectors.toSet());
+
+            marcas = padrao.getMaterialSet().stream()
+                    .map(comp -> toMinDTO(comp.getCompositor().getMarca()))
+                    .collect(Collectors.toSet());
+
+            materiais = padrao.getMaterialSet().stream()
+                    .map(comp -> toMinDTO(comp.getCompositor().getMaterial()))
+                    .collect(Collectors.toSet());
         }
-        return typeDto;
+
+        return new ResPadraoDTO(
+                padrao.getId(),
+                padrao.getName(),
+                padrao.getIsActive(),
+                items,
+                ambientes,
+                marcas,
+                materiais
+        );
+    }
+
+    private ResItemTypeDTO toResItemTypeDTO(ItemDesc item) {
+        return Optional.ofNullable(item.getType())
+                .map(type -> new ResItemTypeDTO(
+                        type.getId(),
+                        type.getName(),
+                        type.getIsActive(),
+                        type.getItemDescSet().stream()
+                                .map(this::toMinDTO)
+                                .collect(Collectors.toSet())
+                ))
+                .orElse(null);
+    }
+
+    private ResMinDTO toMinDTO(ItemDesc it) {
+        return new ResMinDTO(it.getId(), it.getName(), it.getIsActive());
+    }
+
+    private ResMinDTO toMinDTO(Ambiente am) {
+        return new ResMinDTO(am.getId(), am.getName(), am.getIsActive());
+    }
+
+    private ResMinDTO toMinDTO(Marca mr) {
+        return new ResMinDTO(mr.getId(), mr.getName(), mr.getIsActive());
+    }
+
+    private ResMinDTO toMinDTO(Material mt) {
+        return new ResMinDTO(mt.getId(), mt.getName(), mt.getIsActive());
+    }
+
+    private ResMinDTO toMinDTO(Padrao p) {
+        return new ResMinDTO(p.getId(), p.getName(), p.getIsActive());
     }
 
     private Set<ResMinDTO> getMinAmbienteDTO(Set<ItemAmbiente> itemAmbienteSet) {
         return itemAmbienteSet.stream()
-                .map(rel -> new ResMinDTO(
-                        rel.getAmbiente().getId(),
-                        rel.getAmbiente().getName(),
-                        rel.getAmbiente().getIsActive()
-                ))
+                .map(rel -> toMinDTO(rel.getAmbiente()))
                 .collect(Collectors.toSet());
     }
 
     private Set<ResMinDTO> getMinItemDTO(Set<ItemAmbiente> itemAmbienteSet) {
         return itemAmbienteSet.stream()
-                .map(rel -> new ResMinDTO(
-                        rel.getItemDesc().getId(),
-                        rel.getItemDesc().getName(),
-                        rel.getItemDesc().getIsActive()
-                ))
+                .map(rel -> toMinDTO(rel.getItemDesc()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<ResMinDTO> getMinMaterialDTO(Set<MarcaMaterial> marcaMaterialSet) {
+        return marcaMaterialSet.stream()
+                .map(rel -> toMinDTO(rel.getMaterial()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<ResMinDTO> getMinMarcaDTO(Set<MarcaMaterial> marcaMaterialSet) {
+        return marcaMaterialSet.stream()
+                .map(rel -> toMinDTO(rel.getMaterial()))
+                .collect(Collectors.toSet());
+    }
+
+    private Set<ResMinDTO> getMinItemDTOByEntity(Set<ItemDesc> itemDescSet) {
+        return itemDescSet.stream()
+                .map(this::toMinDTO)
                 .collect(Collectors.toSet());
     }
 
     private Set<ResMinDTO> getAmbienteMinPadraoDTO(Set<ItemAmbiente> relSet) {
         return relSet.stream()
                 .flatMap(rel -> rel.getCompSet().stream()
-                        .map(comp -> new ResMinDTO(
-                                comp.getPadrao().getId(),
-                                comp.getPadrao().getName(),
-                                comp.getPadrao().getIsActive()
-                        ))
-                )
-                .collect(Collectors.toSet());
+                        .map(comp -> toMinDTO(comp.getPadrao()))
+                ).collect(Collectors.toSet());
     }
 
-    private Set<ResMinDTO> getMarcaMinPadraoDTO(Set<MarcaMaterial> relSet) {
+    private Set<ResMinDTO> getMaterialMinPadraoDTO(Set<MarcaMaterial> relSet) {
         return relSet.stream()
                 .flatMap(rel -> rel.getCompSet().stream()
-                        .map(comp -> new ResMinDTO(
-                                comp.getPadrao().getId(),
-                                comp.getPadrao().getName(),
-                                comp.getPadrao().getIsActive()
-                        ))
-                )
-                .collect(Collectors.toSet());
+                        .map(comp -> toMinDTO(comp.getPadrao()))
+                ).collect(Collectors.toSet());
+    }
+
+    // COMPOSIÇÂO
+
+    public ResComposicaoDTO toCompDTO(Object comp) {
+        ResComposicaoDTO dto = new ResComposicaoDTO();
+
+        if (comp instanceof ComposicaoAmbiente ca) {
+            dto.setId(ca.getId());
+            dto.setPadrao(toResponse(ca.getPadrao(), false));
+            dto.setCompAmbiente(toResponse(ca.getCompositor()));
+        } else if (comp instanceof ComposicaoMaterial cm) {
+            dto.setId(cm.getId());
+            dto.setPadrao(toResponse(cm.getPadrao(), false));
+            dto.setCompMaterial(toResponse(cm.getCompositor()));
+        } else {
+            throw new InvalidCompositorException("Tipo inválido de composição: " + comp.getClass());
+        }
+
+        return dto;
     }
 }
